# sxc-tools

./: .gitignore  COPYING  Doxyfile.in  Makefile.am  configure.ac
sxc-register/src/: Error.hxx  Makefile.am  Registerer.cxx  Registerer.hxx  main.cxx  print.cxx  print.hxx
sxc-vcard-get/src/: Makefile.am  VCardGetter.cxx  VCardGetter.hxx  escape.cxx  escape.hxx  main.cxx  save.cxx  save.hxx
sxc-vcard-set/src/: Makefile.am  Parser.cxx  Parser.hxx  VCardSetter.cxx  VCardSetter.hxx  load.cxx  load.hxx  main.cxx
